# ProjectBattleshipSemester2

./: .gitignore  CMakeLists.txt  README.md  game
UML/: Regeln.html
examples/: demo  demo.cpp  demo1.cpp  demopybind.cpp  demopybind11.cpp
extra/: demo_api.py  demo_requests.py
include/: Spieler.hpp  SpielerInterface.hpp  battelship.hpp  board.hpp  boardInterface.hpp  game  game.hpp  gameinterface.hpp
src/: Spieler.cpp  board.cpp  game.cpp
test/: test1.cpp
